修改包名，添加findAppById

--- a/src/test/resources/cluster.properties
+++ b/src/test/resources/cluster.properties
@@ -1,5 +1,5 @@
-RM1=172.24.2.184
-RM2=172.24.2.185
-jobhistory=172.24.2.185
+RM1=ark1.analysys.xyz
+RM2=ark2.analysys.xyz
+jobhistory=ark1.analysys.xyz
 rm.port=8088
 jobhistory.port=19888
