--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.bfd.bdos</groupId>
+  <groupId>org.opensource.hadoop</groupId>
   <artifactId>api-resource-hadoop</artifactId>
-  <version>1.2.2</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>api-resource-hadoop</name>
   <properties>
@@ -154,18 +154,5 @@
         
         </resources>
 </build>
-  
-  <distributionManagement>
-	   <repository>
-	      <id>releases</id>
-	      <name>Internal Releases</name>
-	      <url>http://172.18.1.92:8081/nexus/content/repositories/releases/</url>
-	   </repository>
-	   <snapshotRepository>
-	      <id>snapshots</id>
-	      <name>libs-snapshot</name>
-	      <url>http://172.18.1.92:8081/nexus/content/repositories/snapshots/</url>
-	   </snapshotRepository>
-	</distributionManagement> 
 	
 </project>
